src/main/java/com/example/postBlog/error/EntityAlreadyExistException.java
package com.example.postBlog.error;

public class EntityAlreadyExistException extends RuntimeException{

}
